Logging and Junit tests implemented